Disabled overflow-x and fixed body width

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -10,6 +10,11 @@
     @apply bg-psy-bg-dark;
     scroll-behavior: smooth;
   }
+  html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
   h1 {
     @apply text-4xl md:text-5xl text-psy-dark-white font-bold font-roboto;
   }
